<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.red5pro</groupId>
    <artifactId>red5pro-common</artifactId>
    <packaging>jar</packaging>
    <name>red5pro-common</name>
    <version>3.5.0</version>
    <url>https://github.com/red5pro/red5pro-common</url>
    <description>Red5Pro Common</description>
    <inceptionYear>2015</inceptionYear>
    <organization>
        <name>Red5Pro</name>
        <url>http://infrared5.com/</url>
    </organization>
    <licenses>
        <license>
            <name>Infrared5, Inc</name>
            <url>https://account.red5pro.com/assets/LICENSE.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <issueManagement>
        <system>github</system>
        <url>https://github.com/red5pro/red5pro-common/issues</url>
    </issueManagement>
    <scm>
        <url>https://github.com/infrared5/red5pro-common.git</url>
        <connection>scm:git:https://github.com/red5pro/red5pro-common.git</connection>
        <developerConnection>scm:git:https://github.com/red5pro/red5pro-common.git</developerConnection>
    </scm>
    <developers>
        <developer>
            <id>Dominick Accattato</id>
            <email>dominick@infrared5.com</email>
        </developer>
        <developer>
            <id>Paul Gregoire</id>
            <email>paul@infrared5.com</email>
        </developer>
        <developer>
            <id>Andy Shaules</id>
            <email>ashaules@infrared5.com</email>
        </developer>
    </developers>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <skipTests>true</skipTests>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.build.timestamp.format>MM.dd.yyyy HH:mm</maven.build.timestamp.format>
        <timestamp>${maven.build.timestamp}</timestamp>
        <red5.version>1.0.10-M3</red5.version>
        <mina.version>2.0.16</mina.version>
        <spring.version>4.3.2.RELEASE</spring.version>
        <httpcomponents.version>4.5.3</httpcomponents.version>
        <junit.version>4.12</junit.version>
    </properties>
    <distributionManagement>
        <repository>
            <id>red5pro-ext-release</id>
            <name>red5pro-releases</name>
            <url>https://red5pro.jfrog.io/red5pro/ext-release-local</url>
        </repository>
        <snapshotRepository>
            <id>red5pro-ext-snapshot</id>
            <name>red5pro-snapshots</name>
            <url>https://red5pro.jfrog.io/red5pro/ext-snapshot-local</url>
        </snapshotRepository>
    </distributionManagement>
    <dependencies>
        <dependency>
            <groupId>org.red5</groupId>
            <artifactId>red5-server</artifactId>
            <version>${red5.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.red5</groupId>
                    <artifactId>red5-io</artifactId>
                </exclusion>  
                <exclusion>
                    <groupId>org.red5</groupId>
                    <artifactId>red5-server-common</artifactId>
                </exclusion>         
                <exclusion>
                    <groupId>org.red5</groupId>
                    <artifactId>red5-service</artifactId>
                </exclusion>                
                <exclusion>
                    <groupId>org.apache.mina</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.quartz-scheduler</groupId>
                    <artifactId>quartz</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.tika</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <!-- Forced HikariCP exclusion -->
                <exclusion>
                    <groupId>com.zaxxer</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.red5</groupId>
            <artifactId>red5-client</artifactId>
            <version>${red5.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.red5</groupId>
            <artifactId>red5-io</artifactId>
            <version>${red5.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.red5</groupId>
            <artifactId>red5-server-common</artifactId>
            <version>${red5.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <artifactId>mina-core</artifactId>
            <groupId>org.apache.mina</groupId>
            <version>${mina.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${httpcomponents.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <defaultGoal>clean package</defaultGoal>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.6.1</version>
                    <configuration>
                        <fork>true</fork>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.0.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.10.4</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <verbose>true</verbose>
                        <failOnError>false</failOnError>
                        <sourcepath>${basedir}/src/main/java</sourcepath>
                        <includeDependencySources>false</includeDependencySources>
                        <dependencySourceIncludes>
                            <dependencySourceInclude>com.red5pro:*</dependencySourceInclude>
                        </dependencySourceIncludes>
                        <detectOfflineLinks>false</detectOfflineLinks>
                        <tags>
                            <tag>
                                <name>todo</name>
                                <!-- todo tag for all places -->
                                <placement>a</placement>
                                <head>To do:</head>
                            </tag>
                        </tags>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>buildnumber-maven-plugin</artifactId>
                    <version>1.4</version>
                    <executions>
                        <execution>
                            <phase>validate</phase>
                            <goals>
                                <goal>create</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <doCheck>false</doCheck>
                        <doUpdate>false</doUpdate>
                        <!-- Use 7 available chars from git commit -->
                        <shortRevisionLength>7</shortRevisionLength>
                        <scmBranchPropertyName>buildScmBranch</scmBranchPropertyName>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.6</version>
                    <configuration>
                        <archive>
                            <manifestEntries>
                                <Build-OS>${os.name} ${os.version}</Build-OS>
                                <Build-Java>Java ${java.version}</Build-Java>
                                <Build-Timestamp>${timestamp}</Build-Timestamp>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.19.1</version>
                    <configuration>
                        <skipTests>${skipTests}</skipTests>
                        <!--
                        forkCount=1/reuseForks=false executes each test class in its own JVM process, one after another. It creates the highest level of separation for the test execution, but it would probably also give you the longest execution time of all the available options. Consider it as a last resort.
                        -->
                        <forkCount>1</forkCount>
                        <reuseForks>false</reuseForks>
                        <argLine>-Xms512m -Xmx1024m -server -XX:+UseParallelGC -Xverify:none</argLine>
                        <!--
                        <useSystemClassLoader>false</useSystemClassLoader>
                        <useManifestOnlyJar>false</useManifestOnlyJar>
                        -->
                        <!-- kill forks -->
                        <shutdown>kill</shutdown>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>2.9</version>
                </plugin>
                <plugin>
                    <artifactId>maven-scm-plugin</artifactId>
                    <version>1.9.4</version>
                    <configuration>
                        <connectionType>connection</connectionType>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.felix</groupId>
                    <artifactId>maven-bundle-plugin</artifactId>
                    <version>3.0.1</version>
                    <extensions>true</extensions>
                </plugin>
                <plugin>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.5.3</version>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <useReleaseProfile>false</useReleaseProfile>
                        <releaseProfiles>release</releaseProfiles>
                        <goals>deploy</goals>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
